--- a/src/main/resources/templates/departamento/cadastro.html
+++ b/src/main/resources/templates/departamento/cadastro.html
@@ -20,17 +20,16 @@
 		</nav>
 
 		<div class="container" id="cadastro">
+		<div th:replace="fragments/alert"></div>
 		<!--  thaction substitui o atributo action do HTML. Desta forma é possível usar umna expressao do tipo @{/departamentos/salvar} contendo como valor da URL destino --> 
-	<form th:action="@{/departamentos/salvar}" th:object="${departamento}" method="POST">
+	<form th:action="${departamento.id == null} ? @{/departamentos/salvar} : @{/departamentos/editar}" th:object="${departamento}" method="POST">
 				<div class="form-row">
 					<div class="form-group col-md-6">
 						<label for="nome">Departamento</label>
-						 <input type="text"
-							class="form-control" id="nome" placeholder="Nome Departamento"
-							autofocus="autofocus" th:field="*{nome}" />
+						 <input type="text"	class="form-control" id="nome" placeholder="Nome Departamento" autofocus="autofocus" th:field="*{nome}" />
 					</div>
 				</div>
-				<input type="hidden" id="id" name="id" value="" />
+				<input type="hidden" id="id" name="id" th:field="*{id}"/>
 				<button type="submit" class="btn btn-primary btn-sm">Salvar</button>
 			</form>
 		</div>
