--- a/src/main/resources/templates/departamento/lista.html
+++ b/src/main/resources/templates/departamento/lista.html
@@ -21,7 +21,7 @@
 		</nav>
 
 		<div class="container" id="listagem">
-
+		<div th:replace="fragments/alert"></div>
 			<div class="table-responsive">
 				<table class="table table-striped table-hover table-sm">
 					<thead>
@@ -37,19 +37,23 @@
 
 							<td th:text="${dep.id}">3</td>
 							<td th:text="${dep.nome}">Administração</td>
-							<td colspan="2"><a class="btn btn-info btn-sm"
-								href="/departamentos/editar/3" role="button"> <span
-									class="oi oi-brush" title="Editar" aria-hidden="true"></span>
-							</a>
-								<button id="btn_departamentos/excluir/3" type="button"
-									class="btn btn-danger btn-sm">
+							<td colspan="2">
+								<a class="btn btn-info btn-sm" th:href="@{/departamentos/editar/{id} (id=${dep.id})}" role="button"> 
+		                                <span class="oi oi-brush" title="Editar" aria-hidden="true"></span>
+		                            </a>
+							
+								<button th:id="${'btn_departamentos/excluir/' + dep.id}"
+									type="button" class="btn btn-danger btn-sm" data-toggle="modal"
+									data-target="#myModal">
 									<span class="oi oi-circle-x" title="Exclusão desabilitada"
-										aria-hidden="true"></span>
-								</button></td>
+										aria-hidden="true">
+									</span>
+								</button>
 						</tr>
 					</tbody>
 				</table>
 			</div>
+			<div th:replace="fragments/modal :: modal">
 		</div>
 	</section>
 </body>
